[package]

name = "todomvc"
version = "0.1.0"
license = "MIT"
description = "TodoMVC example ported to Rust."
authors = ["Tim Cameron Ryan <tim@timryan.org>"]

[[bin]]
name = "todomvc"

[dependencies]
handlebars = "0.30.0-beta"
webplatform = "0.4.2"
maplit = "0.1.4"
serde = "1.0.8"
serde_json = "1.0.2"
serde_derive = "1.0.8"
